// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invalid-appeal GET / , /new should render the invalid reason page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - mark as invalid</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                            <h1 class="govuk-fieldset__heading"> Why is the appeal invalid?</h1>
                        </legend>
                        <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason" name="invalidReason"
                                type="checkbox" value="21">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason">Appeal has not been submitted on time</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-2" name="invalidReason"
                                type="checkbox" value="22" data-aria-controls="conditional-invalid-reason-2">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-2">Documents have not been submitted on time</label>
                            </div>
                            <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                            id="conditional-invalid-reason-2">
                                <div class="pins-add-another" aria-live="polite" data-max-item-count="10">
                                    <div class="pins-add-another__item govuk-!-margin-top-6">
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full flex-row space-between">
                                                <label for="invalid-reason-22-1" class="govuk-label govuk-!-margin-bottom-4">Enter a reason</label>
                                                <div class="pins-add-another__remove-button-container"></div>
                                            </div>
                                        </div>
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full">
                                                <div class="govuk-form-group">
                                                    <input class="govuk-input pins-add-another__item-input govuk-!-margin-0"
                                                    id="invalid-reason-22-1" name="invalidReason-22" type="text" value="">
                                                </div>
                                            </div>
                                        </div>
                                    </div>
                                    <button type="button" class="govuk-button pins-add-another__add-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-0"
                                    data-module="govuk-button">Add another</button>
                                </div>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-3" name="invalidReason"
                                type="checkbox" value="23">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-3">The appellant does not have the right to appeal</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-4" name="invalidReason"
                                type="checkbox" value="24" data-aria-controls="conditional-invalid-reason-4">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-4">Other reason</label>
                            </div>
                            <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                            id="conditional-invalid-reason-4">
                                <div class="pins-add-another" aria-live="polite" data-max-item-count="10">
                                    <div class="pins-add-another__item govuk-!-margin-top-6">
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full flex-row space-between">
                                                <label for="invalid-reason-24-1" class="govuk-label govuk-!-margin-bottom-4">Enter a reason</label>
                                                <div class="pins-add-another__remove-button-container"></div>
                                            </div>
                                        </div>
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full">
                                                <div class="govuk-form-group">
                                                    <input class="govuk-input pins-add-another__item-input govuk-!-margin-0"
                                                    id="invalid-reason-24-1" name="invalidReason-24" type="text" value="">
                                                </div>
                                            </div>
                                        </div>
                                    </div>
                                    <button type="button" class="govuk-button pins-add-another__add-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-0"
                                    data-module="govuk-button">Add another</button>
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`invalid-appeal POST  / , /new should re-render the invalid reason page with the expected error message if a single invalid reason with text was provided but the matching text property exceeds the character limit 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#invalid-reason-22-1">Reason must be 1000 characters or less</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - mark as invalid</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                            <h1 class="govuk-fieldset__heading"> Why is the appeal invalid?</h1>
                        </legend>
                        <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason" name="invalidReason"
                                type="checkbox" value="21">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason">Appeal has not been submitted on time</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-2" name="invalidReason"
                                type="checkbox" value="22" checked data-aria-controls="conditional-invalid-reason-2">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-2">Documents have not been submitted on time</label>
                            </div>
                            <div class="govuk-checkboxes__conditional" id="conditional-invalid-reason-2">
                                <div class="pins-add-another" aria-live="polite" data-max-item-count="10">
                                    <div class="pins-add-another__item govuk-!-margin-top-6">
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full flex-row space-between">
                                                <label for="invalid-reason-22-1" class="govuk-label govuk-!-margin-bottom-4">Enter a reason</label>
                                                <div class="pins-add-another__remove-button-container"></div>
                                            </div>
                                        </div>
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full">
                                                <div class="govuk-form-group">
                                                    <input class="govuk-input pins-add-another__item-input govuk-!-margin-0"
                                                    id="invalid-reason-22-1" name="invalidReason-22" type="text" value="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa">
                                                </div>
                                            </div>
                                        </div>
                                    </div>
                                    <button type="button" class="govuk-button pins-add-another__add-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-0"
                                    data-module="govuk-button">Add another</button>
                                </div>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-3" name="invalidReason"
                                type="checkbox" value="23">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-3">The appellant does not have the right to appeal</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-4" name="invalidReason"
                                type="checkbox" value="24" data-aria-controls="conditional-invalid-reason-4">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-4">Other reason</label>
                            </div>
                            <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                            id="conditional-invalid-reason-4">
                                <div class="pins-add-another" aria-live="polite" data-max-item-count="10">
                                    <div class="pins-add-another__item govuk-!-margin-top-6">
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full flex-row space-between">
                                                <label for="invalid-reason-24-1" class="govuk-label govuk-!-margin-bottom-4">Enter a reason</label>
                                                <div class="pins-add-another__remove-button-container"></div>
                                            </div>
                                        </div>
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full">
                                                <div class="govuk-form-group">
                                                    <input class="govuk-input pins-add-another__item-input govuk-!-margin-0"
                                                    id="invalid-reason-24-1" name="invalidReason-24" type="text" value="">
                                                </div>
                                            </div>
                                        </div>
                                    </div>
                                    <button type="button" class="govuk-button pins-add-another__add-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-0"
                                    data-module="govuk-button">Add another</button>
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`invalid-appeal POST  / , /new should re-render the invalid reason page with the expected error message if a single invalid reason with text was provided but the matching text property is an empty array 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#invalid-reason-22">Enter a reason</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - mark as invalid</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                            <h1 class="govuk-fieldset__heading"> Why is the appeal invalid?</h1>
                        </legend>
                        <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason" name="invalidReason"
                                type="checkbox" value="21">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason">Appeal has not been submitted on time</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-2" name="invalidReason"
                                type="checkbox" value="22" checked data-aria-controls="conditional-invalid-reason-2">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-2">Documents have not been submitted on time</label>
                            </div>
                            <div class="govuk-checkboxes__conditional" id="conditional-invalid-reason-2">
                                <div class="pins-add-another" aria-live="polite" data-max-item-count="10">
                                    <div class="pins-add-another__item govuk-!-margin-top-6">
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full flex-row space-between">
                                                <label for="invalid-reason-22-1" class="govuk-label govuk-!-margin-bottom-4">Enter a reason</label>
                                                <div class="pins-add-another__remove-button-container"></div>
                                            </div>
                                        </div>
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full">
                                                <div class="govuk-form-group">
                                                    <input class="govuk-input pins-add-another__item-input govuk-!-margin-0"
                                                    id="invalid-reason-22-1" name="invalidReason-22" type="text" value="">
                                                </div>
                                            </div>
                                        </div>
                                    </div>
                                    <button type="button" class="govuk-button pins-add-another__add-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-0"
                                    data-module="govuk-button">Add another</button>
                                </div>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-3" name="invalidReason"
                                type="checkbox" value="23">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-3">The appellant does not have the right to appeal</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-4" name="invalidReason"
                                type="checkbox" value="24" data-aria-controls="conditional-invalid-reason-4">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-4">Other reason</label>
                            </div>
                            <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                            id="conditional-invalid-reason-4">
                                <div class="pins-add-another" aria-live="polite" data-max-item-count="10">
                                    <div class="pins-add-another__item govuk-!-margin-top-6">
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full flex-row space-between">
                                                <label for="invalid-reason-24-1" class="govuk-label govuk-!-margin-bottom-4">Enter a reason</label>
                                                <div class="pins-add-another__remove-button-container"></div>
                                            </div>
                                        </div>
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full">
                                                <div class="govuk-form-group">
                                                    <input class="govuk-input pins-add-another__item-input govuk-!-margin-0"
                                                    id="invalid-reason-24-1" name="invalidReason-24" type="text" value="">
                                                </div>
                                            </div>
                                        </div>
                                    </div>
                                    <button type="button" class="govuk-button pins-add-another__add-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-0"
                                    data-module="govuk-button">Add another</button>
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`invalid-appeal POST  / , /new should re-render the invalid reason page with the expected error message if a single invalid reason with text was provided but the matching text property is an empty string 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#invalid-reason-22-1">Enter a reason</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - mark as invalid</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                            <h1 class="govuk-fieldset__heading"> Why is the appeal invalid?</h1>
                        </legend>
                        <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason" name="invalidReason"
                                type="checkbox" value="21">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason">Appeal has not been submitted on time</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-2" name="invalidReason"
                                type="checkbox" value="22" checked data-aria-controls="conditional-invalid-reason-2">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-2">Documents have not been submitted on time</label>
                            </div>
                            <div class="govuk-checkboxes__conditional" id="conditional-invalid-reason-2">
                                <div class="pins-add-another" aria-live="polite" data-max-item-count="10">
                                    <div class="pins-add-another__item govuk-!-margin-top-6">
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full flex-row space-between">
                                                <label for="invalid-reason-22-1" class="govuk-label govuk-!-margin-bottom-4">Enter a reason</label>
                                                <div class="pins-add-another__remove-button-container"></div>
                                            </div>
                                        </div>
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full">
                                                <div class="govuk-form-group">
                                                    <input class="govuk-input pins-add-another__item-input govuk-!-margin-0"
                                                    id="invalid-reason-22-1" name="invalidReason-22" type="text" value="">
                                                </div>
                                            </div>
                                        </div>
                                    </div>
                                    <button type="button" class="govuk-button pins-add-another__add-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-0"
                                    data-module="govuk-button">Add another</button>
                                </div>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-3" name="invalidReason"
                                type="checkbox" value="23">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-3">The appellant does not have the right to appeal</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-4" name="invalidReason"
                                type="checkbox" value="24" data-aria-controls="conditional-invalid-reason-4">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-4">Other reason</label>
                            </div>
                            <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                            id="conditional-invalid-reason-4">
                                <div class="pins-add-another" aria-live="polite" data-max-item-count="10">
                                    <div class="pins-add-another__item govuk-!-margin-top-6">
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full flex-row space-between">
                                                <label for="invalid-reason-24-1" class="govuk-label govuk-!-margin-bottom-4">Enter a reason</label>
                                                <div class="pins-add-another__remove-button-container"></div>
                                            </div>
                                        </div>
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full">
                                                <div class="govuk-form-group">
                                                    <input class="govuk-input pins-add-another__item-input govuk-!-margin-0"
                                                    id="invalid-reason-24-1" name="invalidReason-24" type="text" value="">
                                                </div>
                                            </div>
                                        </div>
                                    </div>
                                    <button type="button" class="govuk-button pins-add-another__add-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-0"
                                    data-module="govuk-button">Add another</button>
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`invalid-appeal POST  / , /new should re-render the invalid reason page with the expected error message if multiple invalid reasons with text were provided but any of the matching text properties are empty arays 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#invalid-reason-22">Enter a reason</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - mark as invalid</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                            <h1 class="govuk-fieldset__heading"> Why is the appeal invalid?</h1>
                        </legend>
                        <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason" name="invalidReason"
                                type="checkbox" value="21">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason">Appeal has not been submitted on time</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-2" name="invalidReason"
                                type="checkbox" value="22" checked data-aria-controls="conditional-invalid-reason-2">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-2">Documents have not been submitted on time</label>
                            </div>
                            <div class="govuk-checkboxes__conditional" id="conditional-invalid-reason-2">
                                <div class="pins-add-another" aria-live="polite" data-max-item-count="10">
                                    <div class="pins-add-another__item govuk-!-margin-top-6">
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full flex-row space-between">
                                                <label for="invalid-reason-22-1" class="govuk-label govuk-!-margin-bottom-4">Enter a reason</label>
                                                <div class="pins-add-another__remove-button-container"></div>
                                            </div>
                                        </div>
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full">
                                                <div class="govuk-form-group">
                                                    <input class="govuk-input pins-add-another__item-input govuk-!-margin-0"
                                                    id="invalid-reason-22-1" name="invalidReason-22" type="text" value="">
                                                </div>
                                            </div>
                                        </div>
                                    </div>
                                    <button type="button" class="govuk-button pins-add-another__add-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-0"
                                    data-module="govuk-button">Add another</button>
                                </div>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-3" name="invalidReason"
                                type="checkbox" value="23">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-3">The appellant does not have the right to appeal</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-4" name="invalidReason"
                                type="checkbox" value="24" checked data-aria-controls="conditional-invalid-reason-4">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-4">Other reason</label>
                            </div>
                            <div class="govuk-checkboxes__conditional" id="conditional-invalid-reason-4">
                                <div class="pins-add-another" aria-live="polite" data-max-item-count="10">
                                    <div class="pins-add-another__item govuk-!-margin-top-6">
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full flex-row space-between">
                                                <label for="invalid-reason-24-1" class="govuk-label govuk-!-margin-bottom-4">Enter a reason</label>
                                                <div class="pins-add-another__remove-button-container"></div>
                                            </div>
                                        </div>
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full">
                                                <div class="govuk-form-group">
                                                    <input class="govuk-input pins-add-another__item-input govuk-!-margin-0"
                                                    id="invalid-reason-24-1" name="invalidReason-24" type="text" value="">
                                                </div>
                                            </div>
                                        </div>
                                    </div>
                                    <button type="button" class="govuk-button pins-add-another__add-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-0"
                                    data-module="govuk-button">Add another</button>
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`invalid-appeal POST  / , /new should re-render the invalid reason page with the expected error message if multiple invalid reasons with text were provided but any of the matching text properties are empty strings 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#invalid-reason-22-1">Enter a reason</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - mark as invalid</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                            <h1 class="govuk-fieldset__heading"> Why is the appeal invalid?</h1>
                        </legend>
                        <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason" name="invalidReason"
                                type="checkbox" value="21">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason">Appeal has not been submitted on time</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-2" name="invalidReason"
                                type="checkbox" value="22" checked data-aria-controls="conditional-invalid-reason-2">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-2">Documents have not been submitted on time</label>
                            </div>
                            <div class="govuk-checkboxes__conditional" id="conditional-invalid-reason-2">
                                <div class="pins-add-another" aria-live="polite" data-max-item-count="10">
                                    <div class="pins-add-another__item govuk-!-margin-top-6">
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full flex-row space-between">
                                                <label for="invalid-reason-22-1" class="govuk-label govuk-!-margin-bottom-4">Enter a reason</label>
                                                <div class="pins-add-another__remove-button-container"></div>
                                            </div>
                                        </div>
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full">
                                                <div class="govuk-form-group">
                                                    <input class="govuk-input pins-add-another__item-input govuk-!-margin-0"
                                                    id="invalid-reason-22-1" name="invalidReason-22" type="text" value="">
                                                </div>
                                            </div>
                                        </div>
                                    </div>
                                    <button type="button" class="govuk-button pins-add-another__add-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-0"
                                    data-module="govuk-button">Add another</button>
                                </div>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-3" name="invalidReason"
                                type="checkbox" value="23">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-3">The appellant does not have the right to appeal</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-4" name="invalidReason"
                                type="checkbox" value="24" checked data-aria-controls="conditional-invalid-reason-4">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-4">Other reason</label>
                            </div>
                            <div class="govuk-checkboxes__conditional" id="conditional-invalid-reason-4">
                                <div class="pins-add-another" aria-live="polite" data-max-item-count="10">
                                    <div class="pins-add-another__item govuk-!-margin-top-6">
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full flex-row space-between">
                                                <label for="invalid-reason-24-1" class="govuk-label govuk-!-margin-bottom-4">Enter a reason</label>
                                                <div class="pins-add-another__remove-button-container"></div>
                                            </div>
                                        </div>
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full">
                                                <div class="govuk-form-group">
                                                    <input class="govuk-input pins-add-another__item-input govuk-!-margin-0"
                                                    id="invalid-reason-24-1" name="invalidReason-24" type="text" value="">
                                                </div>
                                            </div>
                                        </div>
                                    </div>
                                    <button type="button" class="govuk-button pins-add-another__add-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-0"
                                    data-module="govuk-button">Add another</button>
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`invalid-appeal POST  / , /new should re-render the invalid reason page with the expected error message if multiple invalid reasons with text were provided but any of the matching text properties exceed the character limit 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#invalid-reason-22-1">Reason must be 1000 characters or less</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - mark as invalid</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                            <h1 class="govuk-fieldset__heading"> Why is the appeal invalid?</h1>
                        </legend>
                        <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason" name="invalidReason"
                                type="checkbox" value="21">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason">Appeal has not been submitted on time</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-2" name="invalidReason"
                                type="checkbox" value="22" checked data-aria-controls="conditional-invalid-reason-2">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-2">Documents have not been submitted on time</label>
                            </div>
                            <div class="govuk-checkboxes__conditional" id="conditional-invalid-reason-2">
                                <div class="pins-add-another" aria-live="polite" data-max-item-count="10">
                                    <div class="pins-add-another__item govuk-!-margin-top-6">
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full flex-row space-between">
                                                <label for="invalid-reason-22-1" class="govuk-label govuk-!-margin-bottom-4">Enter a reason</label>
                                                <div class="pins-add-another__remove-button-container"></div>
                                            </div>
                                        </div>
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full">
                                                <div class="govuk-form-group">
                                                    <input class="govuk-input pins-add-another__item-input govuk-!-margin-0"
                                                    id="invalid-reason-22-1" name="invalidReason-22" type="text" value="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa">
                                                </div>
                                            </div>
                                        </div>
                                    </div>
                                    <button type="button" class="govuk-button pins-add-another__add-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-0"
                                    data-module="govuk-button">Add another</button>
                                </div>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-3" name="invalidReason"
                                type="checkbox" value="23">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-3">The appellant does not have the right to appeal</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-4" name="invalidReason"
                                type="checkbox" value="24" checked data-aria-controls="conditional-invalid-reason-4">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-4">Other reason</label>
                            </div>
                            <div class="govuk-checkboxes__conditional" id="conditional-invalid-reason-4">
                                <div class="pins-add-another" aria-live="polite" data-max-item-count="10">
                                    <div class="pins-add-another__item govuk-!-margin-top-6">
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full flex-row space-between">
                                                <label for="invalid-reason-24-1" class="govuk-label govuk-!-margin-bottom-4">Enter a reason</label>
                                                <div class="pins-add-another__remove-button-container"></div>
                                            </div>
                                        </div>
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full">
                                                <div class="govuk-form-group">
                                                    <input class="govuk-input pins-add-another__item-input govuk-!-margin-0"
                                                    id="invalid-reason-24-1" name="invalidReason-24" type="text" value="">
                                                </div>
                                            </div>
                                        </div>
                                    </div>
                                    <button type="button" class="govuk-button pins-add-another__add-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-0"
                                    data-module="govuk-button">Add another</button>
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`invalid-appeal POST  / , /new should re-render the invalid reason page with the expected error message if no invalid reason was provided 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#invalid-reason">Select why the appeal is invalid</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - mark as invalid</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group govuk-form-group--error">
                    <fieldset class="govuk-fieldset" aria-describedby="invalid-reason-error">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                            <h1 class="govuk-fieldset__heading"> Why is the appeal invalid?</h1>
                        </legend>
                        <p id="invalid-reason-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Select why the appeal
                            is invalid</p>
                        <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason" name="invalidReason"
                                type="checkbox" value="21">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason">Appeal has not been submitted on time</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-2" name="invalidReason"
                                type="checkbox" value="22" data-aria-controls="conditional-invalid-reason-2">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-2">Documents have not been submitted on time</label>
                            </div>
                            <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                            id="conditional-invalid-reason-2">
                                <div class="pins-add-another" aria-live="polite" data-max-item-count="10">
                                    <div class="pins-add-another__item govuk-!-margin-top-6">
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full flex-row space-between">
                                                <label for="invalid-reason-22-1" class="govuk-label govuk-!-margin-bottom-4">Enter a reason</label>
                                                <div class="pins-add-another__remove-button-container"></div>
                                            </div>
                                        </div>
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full">
                                                <div class="govuk-form-group">
                                                    <input class="govuk-input pins-add-another__item-input govuk-!-margin-0"
                                                    id="invalid-reason-22-1" name="invalidReason-22" type="text" value="">
                                                </div>
                                            </div>
                                        </div>
                                    </div>
                                    <button type="button" class="govuk-button pins-add-another__add-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-0"
                                    data-module="govuk-button">Add another</button>
                                </div>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-3" name="invalidReason"
                                type="checkbox" value="23">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-3">The appellant does not have the right to appeal</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-4" name="invalidReason"
                                type="checkbox" value="24" data-aria-controls="conditional-invalid-reason-4">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-4">Other reason</label>
                            </div>
                            <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                            id="conditional-invalid-reason-4">
                                <div class="pins-add-another" aria-live="polite" data-max-item-count="10">
                                    <div class="pins-add-another__item govuk-!-margin-top-6">
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full flex-row space-between">
                                                <label for="invalid-reason-24-1" class="govuk-label govuk-!-margin-bottom-4">Enter a reason</label>
                                                <div class="pins-add-another__remove-button-container"></div>
                                            </div>
                                        </div>
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full">
                                                <div class="govuk-form-group">
                                                    <input class="govuk-input pins-add-another__item-input govuk-!-margin-0"
                                                    id="invalid-reason-24-1" name="invalidReason-24" type="text" value="">
                                                </div>
                                            </div>
                                        </div>
                                    </div>
                                    <button type="button" class="govuk-button pins-add-another__add-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-0"
                                    data-module="govuk-button">Add another</button>
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;
